force-app/main/default/objects/QTB_Operational_Account_Core_to_AnZ__e/QTB_Operational_Account_Core_to_AnZ__e.object-meta.xml
<CustomObject>
    <label>Operational Account Core to AnZ</label>
    <pluralLabel>Operational Account Core to AnZs</pluralLabel>
</CustomObject>