force-app/main/default/objects/QTB_Operational_Account_Core_to_AnZ__e/fields/QTB_Service_Account__c.field-meta.xml
<CustomField>
    <fullName>QTB_Service_Account__c</fullName>
    <label>Service Account</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>