force-app/main/default/objects/QTB_Operational_Account_Core_to_AnZ__e/fields/QTB_Service_State_Province__c.field-meta.xml
<CustomField>
    <fullName>QTB_Service_State_Province__c</fullName>
    <label>Service State/Province</label>
    <length>225</length>
    <type>Text</type>
</CustomField>